<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/floured_bench">

        <CheckBox
            android:id="@+id/overview_favourite_cb"
            android:contentDescription="@string/recipe_overview_favourite_button"
            style="@style/favButton"
            android:layout_marginEnd="@dimen/half_margin"
            android:layout_marginRight="@dimen/half_margin"
            android:layout_marginTop="@dimen/half_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ingredients_label"
            style="@style/labels"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/ingredients_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ingredient_rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:background="@drawable/rounded_background"
            android:scrollbarSize="5dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ingredients_label"
            app:layout_constraintTop_toBottomOf="@+id/ingredients_label"
            tools:text="The list of ingredients" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <TextView
            android:id="@+id/method_overview_label"
            style="@style/labels"
            android:layout_marginTop="8dp"
            android:text="@string/overview_of_method_label"
            app:layout_constraintStart_toStartOf="@+id/ingredient_rv"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_steps_rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="@drawable/rounded_background"
            android:padding="@dimen/half_margin"
            android:scrollbarSize="5dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/method_overview_label"
            app:layout_constraintTop_toBottomOf="@+id/method_overview_label" />

    </android.support.constraint.ConstraintLayout>
</layout>