<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxLines="4"
    android:paddingEnd="@dimen/half_margin"
    android:paddingRight="@dimen/half_margin">

    <TextView
        android:id="@+id/ingredient_tv"
        style="@style/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/half_margin"
        android:layout_marginStart="@dimen/half_margin"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ingredient_cb"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="listed ingredient" />

    <CheckBox
        android:theme="@style/check"
        android:id="@+id/ingredient_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/ingredient_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ingredient_tv" />
</android.support.constraint.ConstraintLayout>
