...
            app:layout_constraintBottom_toBottomOf="@+id/serving_iv"
            app:layout_constraintStart_toEndOf="@+id/serving_iv"
            app:layout_constraintTop_toTopOf="@+id/card_image_iv"
            tools:text="8" />

        <CheckBox
            android:id="@+id/recipe_favourite_cb"
            style="@style/favButton"
            android:contentDescription="@string/recipe_card_favourite_button"
            app:layout_constraintEnd_toEndOf="@+id/card_image_iv"
            app:layout_constraintTop_toTopOf="@+id/card_image_iv" />

        <ImageView
...
